# Credit-Risk-Default

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SETUP.md  init_project.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
app/: main.py  requirements.txt
app/components/: risk_badge.py  score_badge.py  shap_chart.py
app/pages/: batch_upload.py  case_review.py  queue.py  summary.py
data/: DATA_CARD.md
data/data_dictionary/: Lending Club Data Dictionary Reject.csv
docs/: decisions.md  setup_guide.md  workflow.md
models/: MODEL_CARD.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_explainability.ipynb
src/: __init__.py  data_pipeline.py  evaluate.py  explain.py  features.py  gemini.py  predict.py  prompts.py  train.py
tests/: test_data_pipeline.py  test_features.py  test_gemini.py
