[project]
name = "{{PROJECT_SLUG}}"
version = "0.1.0"
description = "{{PROJECT_DESCRIPTION}}"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "imbalanced-learn>=0.12",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "plotly>=5.18",
    # Gemini integration (remove if not using)
    "google-generativeai>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
